--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
   </head>
   <body>
     <p>Just wondering if you have plans for Feb 14, Michelle?</p>
-    <p>I’m thinking about doing something with you ;)</p>p>
-    <p>Will you be my Valentine?</p>
+    <p>I’m thinking about doing something with you ;)</p>
     <img src="https://media1.tenor.com/m/5Ux5jcrpkHoAAAAC/a-peck-on-the-cheeks-pudgy-penguins.gif">
   </body>
   <title>Buttons</title>
